# RAG-science_articles

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
experiments/embedders/: e5.ipynb  generate_dataset.ipynb  test_data.csv
ml/: preprocessing.py  scrapper.py
web/: app.py
