[project]
name = "rag-articles"
version = "0.1.0"
description = ""
authors = [
    {name = "InfiRRiar"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.web.dependencies]
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.35.0"

