[project]
name = "rag-articles"
version = "0.1.0"
description = ""
authors = [
    {name = "InfiRRiar"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.web.dependencies]
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.35.0"


[tool.poetry.group.ml.dependencies]
torch = "^2.8.0"
transformers = "^4.55.0"
datasets = "^4.0.0"
evaluate = "^0.4.5"
accelerate = "^1.10.0"
timm = "^1.0.19"


[tool.poetry.group.exp.dependencies]
ipykernel = "^6.30.1"
ipywidgets = "^8.1.7"

